--- a/index.html
+++ b/index.html
@@ -191,8 +191,6 @@ svg {
 </style>
 </head>
 <body>
-
-<body>
 <div class="content-wrapper">
 
 <h1 class="game-title">LEDGER AND LIGHTYEAR</h1>
@@ -625,8 +623,6 @@ svg {
             <td style="padding: 10px 15px; border: 1px solid #555; text-align: center; white-space: nowrap;"><strong>17-20</strong></td>
             <td style="padding: 10px 15px; border: 1px solid #555; text-align: left;"><strong>Empty Space</strong>.</td>
         </tr>
-    </table>
-</div>
-</div>
-</body>
+</table>
+</div> </div> </body>
 </html>
